# e2e-Agentic-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cicd.yaml
Notebooks/: Chatbot_workflow.ipynb  HITL.ipynb  rag_workflow.ipynb  tools_workflow.ipynb
app/: agentic_chatbot.py  streamlit_app.py
