[project]
name = "e2e-agent-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "notebook>=7.6.0",
    "streamlit>=1.58.0",
]
